# project-packman

./: .gitlab-ci.yml
packman_common_bringup/: CMakeLists.txt  package.xml
packman_common_bringup/config/: diagnostic_analyzers.yaml  joy.yaml  teleop_twist_joy.yaml  twist_mux.yaml
packman_common_bringup/launch/: joy.launch.xml
packman_description/: CMakeLists.txt  package.xml
packman_description/test/: load_urdf.test  load_urdf_with_prefix.test
packman_description/urdf_xacro/: robot.gazebo  robot.urdf.xacro
packman_desktop_bringup/: CMakeLists.txt  package.xml  plugin_description.xml
packman_desktop_bringup/config/: config.rviz
packman_desktop_bringup/env-hooks/: 99.packman_desktop_bringup_functions.bash
packman_desktop_bringup/launch/: rviz.launch
packman_desktop_bringup/launch/includes/: rviz_relays.launch.xml
packman_hardware/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
packman_hardware/config/: hardware.yaml  robot.urdf.xacro
packman_hardware/etc/systemd/system/: slcand@.service
packman_hardware/etc/udev/: 90-packman_hardware_bringup.rules
packman_hardware/launch/: hardware.launch  hardware.launch.xml
packman_hardware/scripts/: install_slcand  twist_to_twiststamped
packman_hardware/src/: control_loop.cpp  control_loop.h  control_loop.hpp  main.cpp  messages.cpp  messages.h  messages.hpp  nmt.cpp  nmt.hpp  packman_hardware_interface.cpp  packman_hardware_interface.h  packman_hardware_node.cpp  packman_interface.cpp  packman_interface.h  packman_interface.hpp  packman_state.h  pacman_interface.cpp  pacman_interface.h  robot_hw.cpp  robot_hw.h  robot_hw.hpp  system_interface.cpp  system_interface.hpp  test_packman_hardware.cpp  test_slow_speed.cpp
packman_hardware_bringup/: CMakeLists.txt  package.xml
packman_hardware_bringup/config/: controller_manager.yaml  hardware_diagnostic_analyzers.yaml  omron.yaml  packman.yaml
packman_hardware_bringup/etc/udev/: 60-packman_hardware_bringup.rules
packman_hardware_bringup/launch/: robot_interfaces.launch  robot_interfaces.launch.xml
packman_hardware_bringup/launch/includes/: robot.launch.xml
packman_hardware_bringup/scripts/: install_systemd_services  install_udev_rules_and_update_permissions
packman_intelligence_bringup/: CMakeLists.txt  package.xml
packman_intelligence_bringup/config/: diagnostic_analyzers.yaml  gmapping.yaml  nav2_params.yaml  slam_toolbox.yaml
packman_intelligence_bringup/config/localization/: amcl.yaml
packman_intelligence_bringup/config/navigation/controllers/: carrot_controller.yaml  dwa.yaml
packman_intelligence_bringup/config/navigation/mbf/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
packman_intelligence_bringup/config/navigation/planners/: backward_planner.yaml
packman_intelligence_bringup/launch/: intelligence.launch  intelligence.launch.xml  slam.launch
packman_intelligence_bringup/launch/includes/: amcl_localization.launch.xml  mbf.launch.xml
packman_intelligence_bringup/maps/: map.pgm  map.yaml
packman_intelligence_bringup/scripts/: copy_maps_to_ros_home  install_systemd_services
packman_simulation_bringup/: CMakeLists.txt  package.xml
packman_simulation_bringup/launch/: fleet_simulation.launch  simulation.launch  simulation.launch.xml
packman_simulation_bringup/launch/includes/: robot_interfaces.launch.xml
packman_simulation_bringup/worlds/: ruvu_warehouse.world  ruvu_warehouse.yaml
