<?xml version="1.0"?>
<package format="3">
  <name>packman_common_bringup</name>
  <version>0.0.0</version>
  <description>The packman_common_bringup package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>ruvu_teleop</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
