<?xml version="1.0"?>
<package format="3">
  <name>packman_description</name>
  <version>0.0.0</version>
  <description>The packman_description package</description>

  <maintainer email="paul@ruvu.nl">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <test_depend>roslaunch</test_depend>
</package>
