<?xml version="1.0"?>
<package format="3">
  <name>packman_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The packman_desktop_bringup package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>ruvu_bringup</exec_depend>
  <exec_depend>ruvu_mbf</exec_depend>
  <exec_depend>ruvu_rviz_plugins</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
