<?xml version="1.0"?>
<package format="3">
  <name>packman_hardware</name>
  <version>0.0.0</version>
  <description>The packman_harware package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>

  <test_depend>roslaunch</test_depend>
</package>
