<?xml version="1.0"?>
<package format="3">
  <name>packman_hardware_bringup</name>
  <version>0.0.0</version>
  <description>The packman_hardware_bringup package</description>

  <maintainer email="paul@ruvu.nl">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_common_diagnostics</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>packman_common_bringup</exec_depend>
  <exec_depend>packman_description</exec_depend>
  <exec_depend>packman_hardware</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
