<?xml version="1.0"?>
<package format="3">
  <name>packman_intelligence_bringup</name>
  <version>0.0.0</version>
  <description>The packman_intelligence_bringup package</description>

  <maintainer email="paul@ruvu.nl">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  <build_depend>ruvu_lint</build_depend>-->

<!--  <exec_depend>amcl</exec_depend>-->
<!--  <exec_depend>diagnostic_aggregator</exec_depend>-->
<!--  <exec_depend>global_planner</exec_depend>-->
  <exec_depend>slam_toolbox</exec_depend>
<!--  <exec_depend>map_server</exec_depend>-->
<!--  <exec_depend>mbf_costmap_nav</exec_depend>-->
<!--  <exec_depend>ruvu_carrot_local_planner</exec_depend>-->
<!--  <exec_depend>ruvu_msg_converters</exec_depend>-->
<!--  <exec_depend>ruvu_networkx</exec_depend>-->

<!--  <test_depend>roslaunch</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
