<?xml version="1.0"?>
<package format="3">
  <name>packman_simulation_bringup</name>
  <version>0.0.0</version>
  <description>The packman_simulation_bringup package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ruvu_lint</build_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_common_diagnostics</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>packman_common_bringup</exec_depend>
  <exec_depend>packman_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ruvu_gazebo_plugins</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
